--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       </tr>
 
       <tr>
-        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1wKtcehdJTvNBxDIvCVc8IsJ5CJyZxuwDru5qzxXZIC4/edit?usp=sharing">5. Gráficos, Sparkline e imagens.</a> </td>
+        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1wKtcehdJTvNBxDIvCVc8IsJ5CJyZxuwDru5qzxXZIC4/edit?usp=sharing">5. Gráficos, Sparkline e Imagens.</a> </td>
       </tr>
 
       <tr>
