--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       </tr>
 
       <tr>
-        <td><a href="#">6. Em construção</a> </td>
+        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1A7ANtczD-RuoHPFUyb9LZts-kqrz-SPMlstyfdgGjMQ/edit?usp=sharing">6. Referência Absoluta, Data Validation, Split e Filtros.</a> </td>
       </tr>
 
     </table>
